--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
 </head>
 
 <body>
@@ -86,7 +86,7 @@
                                 <div class="header-bottom">
                                     <h1>Hello!</h1>
                                     <h3><span>I'm</span> Shahul Hameed</h3>
-                                    <p>Asp .Net Developer</p>
+                                    <p>Asp Dot Net Developer</p>
                                 </div>
                             </div>
                         </div>
@@ -125,8 +125,8 @@
                             <li><span>Name: </span> Shahul Hameed</li>
                             <li><span>Date of birth: </span> 03 April 2001</li>
                             <li><span>Nationality: </span> INDIA</li>
-                            <li><span>Address: </span> Thrissur, Kerala</li>
-                            <li><span>Phone: </span> 91- 9645708910</li>
+                            <li><span>Address: </span> Sharja,UAE</li>
+                            <li><span>Phone: </span> +971 0505427168</li>
                             <li><span>E-Mail: </span> shahulvkd7@gmail.com</li>
                         </ul>
                     </div>
@@ -252,11 +252,11 @@
                                     </div>
                                     <div class="cd-timeline-content">
                                         <div class="cd-heading wow fadeInRight">
-                                            <h2>Asp .Net Developer</h2>
-                                            <p><span> </span>  2024</p>
+                                            <h2>Bachelor of Computer Application</h2>
+                                            <p>2019 - 2022 |<span> Calicut University</span></p>
                                         </div>
                                         <span class="cd-description wow fadeInLeft">
-                                            Highly motivated and enthusiastic (Asp .Net) Developer with a strong foundation in computer science and programming. Proficient in C#, (Asp .Net), MVC, and Entity Framework. Eager to learn and contribute to innovative projects.                                        </span>
+                                            UG focusing on computer science, programming, databases, networking, and web development. It equips students with practical skills for software development and prepares them for careers in various IT roles.                                </span>
                                     </div>
                                 </div>
                                 <div class="cd-timeline-block">
@@ -265,11 +265,11 @@
                                     </div>
                                     <div class="cd-timeline-content">
                                         <div class="cd-heading wow fadeInRight">
-                                            <h2>Software Testing Specialist Intern</h2>
-                                            <p><span> Luminar Technolab Calicut</span> | 2022 - 2023</p>
+                                            <h2>Plus Two</h2>
+                                            <p><span>MASM Higher Secondary School Venmenad</span>Thrissur</p>
                                         </div>
                                         <span class="cd-description wow fadeInLeft">
-                                            Completed a comprehensive Software Testing Specialist course, Software testing is the process of checking the quality, functionality, and performance of a software product before launching. To do software testing, testers either interact with the software manually or execute test scripts to find bugs and errors, ensuring that the software works as expected.                                        </span>
+                                            I completed a comprehensive computer science course during Plus Two, which fueled my passion for the field, enhanced my problem-solving skills, and inspired me to pursue further studies and a career in computer science.                                        </span>
                                     </div>
                                 </div>
                                 <!--===Single Education End===-->
@@ -280,11 +280,11 @@
                                 </div>
                                 <div class="cd-timeline-content">
                                     <div class="cd-heading wow fadeInLeft">
-                                        <h2>Bachelor of Computer Application</h2>
-                                        <p>2019 - 2022 | <span>Calicut  University</span></p>
+                                        <h2>Software Testing Specialist</h2>
+                                        <p>2022 - 2023 | <span>Luminar Technolab</span></p>
                                     </div>
                                     <span class="cd-description wow fadeInRight">
-                                        UG focusing on computer science, programming, databases, networking, and web development. It equips students with practical skills for software development and prepares them for careers in various IT roles.                                    </span>
+                                        Completed a comprehensive Software Testing Specialist course, Software testing is the process of checking the quality, functionality, and performance of a software product before launching. To do software testing, testers either interact with the software manually or execute test scripts to find bugs and errors, ensuring that the software works as expected                           </span>
                                 </div>
                             </div>
                             <!--===Single Education End===-->
@@ -296,12 +296,12 @@
                                 </div>
                                 <div class="cd-timeline-content">
                                     <div class="cd-heading wow fadeInRight">
-                                        <h2>Plus Two</h2>
-                                        <p><span>MASM Higher Secondary School Venmenad</span> Thrissur</p>
+                                        <h2>Asp Dot net</h2>
+                                        <p><span></span> 2024</p>
                                     </div>
                                     <span class="cd-description wow fadeInLeft">
 
-                                        I completed a comprehensive computer science course during Plus Two, which fueled my passion for the field, enhanced my problem-solving skills, and inspired me to pursue further studies and a career in computer science.                                </div>
+                                        Highly motivated and enthusiastic (Asp .Net) Developer with a strong foundation in computer science and programming. Proficient in C#, (Asp .Net), MVC, and Entity Framework. Eager to learn and contribute to innovative projects.                               </span>
                             </div>
                             <!--===Single Education End===-->
 
